# fuselage

./: .gitignore  Cargo.toml  README.md
examples/: basics.rs  iris.rs
fuselage-macros/: Cargo.toml
fuselage-macros/src/: lib.rs
fuselage-macros/tests/: simple.rs
src/: dataframe.rs  io.rs  lib.rs  macros.rs  series.rs
tests/: inserts.rs  macros.rs
