[package]
name = "fuselage"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
csv = "^1"
derive_builder = "^0.7"
flate2 = "^1"
